--- a/index.html
+++ b/index.html
@@ -16,9 +16,24 @@
 
   <section class="fade-in" id="about">
     <div class="container">
-      <h2>About Me</h2>
-      <p>I am <strong>Mrutunjaya Senapati</strong>, a passionate Bug Bounty Hunter and Ethical Hacker. I build tools like Host Header Injection Scanner and share tutorials, tools, and exploits on Medium and GitHub. I’m focused on web security, automation, and exploit development.</p>
-    </div>
+  <h2>About Me</h2>
+  <p>
+    I am <strong>Mrutunjaya Senapati</strong>, also known as <strong>None_C</strong> — a dedicated <strong>Bug Bounty Hunter</strong> and <strong>Ethical Hacker</strong> with expertise in Web Application Security, Automation, and Exploit Development.
+  </p>
+  <p>
+    I've actively hunted on platforms like <a href="https://bugcrowd.com/None_C" target="_blank">Bugcrowd</a>, reporting over <strong>50+ bugs</strong> including critical vulnerabilities like <strong>SSRF, XSS, Host Header Injection, Authentication Bypass, Session Hijacking, and Password Brute-Force.</strong>
+  </p>
+  <p>
+    I created automation tools like the <a href="https://github.com/N0neC/host-header-injection-tool" target="_blank">Host Header Injection Scanner</a> to simplify vulnerability detection for security researchers.
+  </p>
+  <p>
+    I also write detailed blogs on real-world vulnerabilities, PoCs, and bug bounty tips at <a href="https://medium.com/@mrutunjayasenapati0" target="_blank">Medium</a>.
+  </p>
+  <p>
+    My mission is to protect systems, spread cybersecurity awareness, and share practical knowledge with the hacker community. 🚀
+  </p>
+</div>
+
   </section>
 
   <section class="fade-in" id="links">
