privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -143,7 +143,7 @@
 
       <h4 style="margin-top:14px">What you were shown</h4>
       <ul>
-        <li>A professional‑looking corporate login interface</li>
+        <li>A professional‑looking corporate login interfac1e</li>
         <li>Familiar branding and security badges to increase trust</li>
         <li>Calls to action that encourage immediate login</li>
       </ul>
