--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>None_C | Bug Bounty Hunter</title>
+  <title>Mrutunjaya | Bug Bounty Hunter</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>None_C</h1>
+      <h1>Mrutunjaya</h1>
       <h2 class="typing"></h2>
     </div>
   </header>
@@ -18,7 +18,7 @@
     <div class="container">
   <h2>About Me</h2>
   <p>
-    I am <strong>Mrutunjaya Senapati</strong>, also known as <strong>None_C</strong> — a dedicated <strong>Bug Bounty Hunter</strong> and <strong>Ethical Hacker</strong> with expertise in Web Application Security, Automation, and Exploit Development.
+    I am <strong>Mrutunjaya Senapati</strong>, also known as <strong>Bapi</strong> — a dedicated <strong>Bug Bounty Hunter</strong> and <strong>Ethical Hacker</strong> with expertise in Web Application Security, Automation, and Exploit Development.
   </p>
   <p>
     I've actively hunted on platforms like <a href="https://bugcrowd.com/None_C" target="_blank">Bugcrowd</a>, reporting over <strong>50+ bugs</strong> including critical vulnerabilities like <strong>SSRF, XSS, Host Header Injection, Authentication Bypass, Session Hijacking, and Password Brute-Force.</strong>
