--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           and bug bounty hunting, I help organizations strengthen their defenses and stay fully secure and compliant.
         </p>
         <div class="hero-cta">
-          <a href="#contact" class="btn btn-primary">Get In Touch</a>
+          <a href="Contact.html" class="btn btn-primary">Get In Touch</a>
           <a href="#services" class="btn btn-secondary">View Services</a>
         </div>
       </div>
