--- a/Contact.html
+++ b/Contact.html
@@ -142,7 +142,7 @@
       <p>Interested in working together or have a security project in mind? Let's connect and discuss how I can help secure your digital assets.</p>
       </div>
       <!-- Contact Form Start -->
-      <form class="contact-form" action="https://formspree.io/f/xrbyrkbq" method="post" style="margin-top:2rem;">
+      <form class="contact-form" action="https://formspree.io/f/xwpranaq" method="post" style="margin-top:2rem;">
         <label for="name">Name<span style="color:red;">*</span></label>
         <input type="text" id="name" name="name" required placeholder="Your Name">
 
@@ -150,7 +150,7 @@
         <input type="email" id="email" name="email" required placeholder="you@example.com">
 
         <label for="subject">Subject</label>
-        <input type="text" id="subject" name="subject" placeholder="Subject">
+        <input type="text" id="subject" name="name" placeholder="Subject">
 
         <label for="message">Message<span style="color:red;">*</span></label>
         <textarea id="message" name="message" rows="5" required placeholder="Your message"></textarea>
@@ -338,5 +338,6 @@
 
   <script src="script.js"></script>
 </body>
+
 
 </html>
