--- a/Contact.html
+++ b/Contact.html
@@ -645,6 +645,7 @@
           <div class="fs-field">
             <label class="bapi" for="business-area">Business Area</label>
             <select class="fs-select" id="business-area" name="business-area" required>
+                <option value="">-- Select Business Area --</option>
               <option value="security-consulting">Security Consulting</option>
               <option value="penetration-testing">Penetration Testing</option>
               <option value="vulnerability-assessment">Vulnerability Assessment</option>
@@ -652,8 +653,6 @@
               <option value="security-audit">Security Audit</option>
               <option value="bug-bounty">Bug Bounty / VDP</option>
               <option value="training-workshops">Training / Workshops</option>
-              <option value="security-team">Security / InfoSec Team</option>
-              <option value="it-operations">IT / DevOps</option>
               <option value="web-development">Web Development</option>
               <option value="devops-network">Network / Infrastructure</option>
               <option value="sales-marketing">Sales / Marketing</option>
@@ -665,6 +664,7 @@
           <div class="fs-field">
             <label class="bapi" for="request-type">Type of Request</label>
             <select class="fs-select" id="request-type" name="request-type" required>
+             <option value="">-- Select Request Type --</option>
               <option value="security-audit-quote">Request: Security Audit / Quote</option>
               <option value="vulnerability-assessment">Vulnerability Assessment (VAPT / WAPT)</option>
               <option value="api-security-testing">API / Mobile App Security Testing</option>
@@ -921,3 +921,4 @@
 </body>
 
 </html>
+
