--- a/Terms.html
+++ b/Terms.html
@@ -9,6 +9,7 @@
     content="Cybersecurity expert specializing in VAPT, WAPT, vulnerability assessment, and bug bounty hunting. Professional penetration testing and security consulting services.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
     rel="stylesheet">
@@ -238,5 +239,6 @@
 
   <script src="script.js"></script>
 </body>
+
 
 </html>
