--- a/Blog.html
+++ b/Blog.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>Mrutunjaya Senapati - Cybersecurity Professional</title>
+    <title>Mrutunjaya Senapati | Cybersecurity Expert & Bug Hunter</title>
     <meta name="description"
         content="Cybersecurity expert specializing in VAPT, WAPT, vulnerability assessment, and bug bounty hunting. Professional penetration testing and security consulting services.">
+    <meta name="description" content="Cybersecurity professional specializing in VAPT, WAPT, and bug bounty programs. Helping businesses stay secure from cyber threats.">
+    <meta name="keywords" content="cybersecurity, VAPT, bug bounty, penetration testing, web security, Mrutunjaya Senapati">
+    <meta name="author" content="Mrutunjaya Senapati">
+    <meta name="author" content="Mrutunjaya Senapati">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="canonical" href="https://mrutunjaya.senapati.xyz/Blog.html">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
         rel="stylesheet">
@@ -213,3 +218,4 @@
 
 
 </html>
+
