--- a/DMCA.html
+++ b/DMCA.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/png" href="/favicon.png">
-    <link rel="canonical" href="https://mrutunjaya.senapati.xyz/">
+    <link rel="canonical" href="https://mrutunjaya.senapati.xyz/DMCA.html">
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
     rel="stylesheet">
@@ -211,4 +211,5 @@
 
 
 </html>
+
 
