--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
     rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RF2RC1S7PV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-RF2RC1S7PV');
+</script>
+    
 <body>
   <nav class="navbar">
     <div class="container">
