--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="author" content="Mrutunjaya Senapati">
     <meta name="author" content="Mrutunjaya Senapati">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="ad04f59b-323c-4a0c-929e-25ffc100b6f0" type="text/javascript" async></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="canonical" href="https://mrutunjaya.senapati.xyz/">
