--- a/Services.html
+++ b/Services.html
@@ -116,7 +116,7 @@
                         <p>Expert consulting for strengthening your security posture, improving compliance, and building
                             a robust defense strategy.</p>
                     </div>
-                    <div class="service-card">
+               <!--      <div class="service-card">
                         <div class="service-icon">🕵️‍♂️</div>
                         <h3>Digital Forensics</h3>
                         <p>Assistance in evidence collection, malware analysis, and forensic investigation for incident
@@ -133,7 +133,7 @@
                         <h3>Network Configuration</h3>
                         <p>Setup and configuration of secure networks, firewalls, routers, and VPNs to ensure strong
                             protection and smooth connectivity.</p>
-                    </div>
+                    </div>  -->
                 </div>
             </div>
         </section>
@@ -257,4 +257,5 @@
 
 
 </html>
+
 
