--- a/Services.html
+++ b/Services.html
@@ -69,15 +69,16 @@
             <div class="container">
                 <p
                     style="text-align: center; max-width: 900px; margin: 0 auto 3rem; font-size: 1.1rem; color: var(--text-secondary);">
-                    I provide comprehensive <b>cybersecurity services</b> to protect businesses and digital assets from
-                    modern threats. My expertise includes <b>VAPT</b>, <b>WAPT</b>, <b>API Security Testing</b>,
-                    <b>Network Testing</b>, and <b>Vulnerability Assessment & Remediation</b>. I also offer <b>Security
-                        Consultation</b> for strategic guidance, and <b>Digital Forensics</b> for evidence analysis and
-                    incident investigations. Additionally, I deliver secure <b>Web Design & Development</b> and reliable
-                    <b>Network Configuration</b>. With hands-on experience in <b>Bugcrowd</b>, <b>HackerOne</b>,
-                    <b>Intigriti</b>, and <b>Open Bug Bounty</b>, having submitted over <b>200+</b> reports, I combine
-                    real-world attack knowledge with custom tools to ensure thorough, actionable, and professional
-                    security solutions.
+We offer comprehensive <b>cybersecurity services</b> designed to safeguard your digital assets against modern cyber threats. 
+Our core services include <b>Security Consultation</b>, <b>Vulnerability Assessment & Remediation</b>, 
+<b>VAPT (Vulnerability Assessment and Penetration Testing)</b>, <b>WAPT (Web Application Penetration Testing)</b>, 
+<b>API Security Testing</b>, and <b>Network Penetration Testing</b>. We follow industry best practices and standards 
+like <b>OWASP</b> and perform both automated and <b>manual testing</b> to uncover real-world vulnerabilities. 
+From securing your <b>web applications</b> and <b>APIs</b> to identifying <b>network misconfigurations</b>, 
+we provide <b>detailed assessments</b> and <b>actionable remediation plans</b>. 
+Our <b>expert consulting</b> helps you build a stronger, compliant, and more resilient <b>security posture</b>. 
+Whether you're a startup or an enterprise, we tailor our solutions to meet your specific needs 
+and ensure <b>complete protection</b>.
                 </p>
                 <div class="services-grid">
                     <div class="service-card">
@@ -257,5 +258,6 @@
 
 
 </html>
+
 
 
