--- a/Services.html
+++ b/Services.html
@@ -80,43 +80,44 @@ Our <b>expert consulting</b> helps you build a stronger, compliant, and more res
 Whether you're a startup or an enterprise, we tailor our solutions to meet your specific needs 
 and ensure <b>complete protection</b>.
                 </p>
-                <div class="services-grid">
-                    <div class="service-card">
-                        <div class="service-icon">🔒</div>
-                        <h3>Vulnerability Assessment & Penetration Testing (VAPT)</h3>
-                        <p>Identify, exploit, and fix real-world vulnerabilities in your systems through professional
-                            assessment and manual penetration testing.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">💻</div>
-                        <h3>Web Application Penetration Testing (WAPT)</h3>
-                        <p>Comprehensive web app testing for XSS, SQLi, authentication flaws, and configuration
-                            weaknesses to ensure complete application security.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">🔌</div>
-                        <h3>API Security Testing</h3>
-                        <p>Secure your REST and GraphQL APIs against broken authentication, improper authorization, and
-                            data exposure vulnerabilities.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">🌐</div>
-                        <h3>Network Penetration Testing</h3>
-                        <p>Evaluate your network for open ports, misconfigurations, and exploitable weaknesses to
-                            strengthen internal and external security.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">🛡️</div>
-                        <h3>Vulnerability Assessment & Remediation</h3>
-                        <p>Detailed scanning and manual validation with a clear remediation plan to patch
-                            vulnerabilities before they become exploitable.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">📋</div>
-                        <h3>Security Consultation</h3>
-                        <p>Expert consulting for strengthening your security posture, improving compliance, and building
-                            a robust defense strategy.</p>
-                    </div>
+<div class="services-grid">
+    <div class="service-card">
+        <div class="service-icon">🔒</div>
+        <h3>Cyber Security Services</h3>
+        <p>Comprehensive protection for systems, applications, APIs, and networks using industry standards and expert manual testing.</p>
+    </div>
+
+    <div class="service-card">
+        <div class="service-icon">📋</div>
+        <h3>Security Consultation</h3>
+        <p>Get expert advice to strengthen your security posture, meet compliance, and plan effective cyber defense strategies.</p>
+    </div>
+
+    <div class="service-card">
+        <div class="service-icon">🛡️</div>
+        <h3>Vulnerability Assessment & Remediation</h3>
+        <p>Identify and fix system vulnerabilities with detailed scans, manual verification, and clear, actionable remediation plans.</p>
+    </div>
+
+    <div class="service-card">
+        <div class="service-icon">💻</div>
+        <h3>VAPT & WAPT</h3>
+        <p>Simulate real-world attacks on systems and web apps to uncover and patch critical security weaknesses effectively.</p>
+    </div>
+
+    <div class="service-card">
+        <div class="service-icon">🔌</div>
+        <h3>API Security Testing</h3>
+        <p>Test REST and GraphQL APIs for broken authentication, data leaks, and authorization flaws using secure methods.</p>
+    </div>
+
+    <div class="service-card">
+        <div class="service-icon">🌐</div>
+        <h3>Network Penetration Testing</h3>
+        <p>Assess internal and external networks for exposed ports, misconfigurations, and exploitable security loopholes and risks.</p>
+    </div>
+</div>
+
                <!--      <div class="service-card">
                         <div class="service-icon">🕵️‍♂️</div>
                         <h3>Digital Forensics</h3>
@@ -258,6 +259,7 @@ and ensure <b>complete protection</b>.
 
 
 </html>
+
 
 
 
