--- a/Services.html
+++ b/Services.html
@@ -81,41 +81,53 @@ Whether you're a startup or an enterprise, we tailor our solutions to meet your 
 and ensure <b>complete protection</b>.
                 </p>
 <div class="services-grid">
-    <div class="service-card">
-        <div class="service-icon">🔒</div>
-        <h3>Cyber Security Services</h3>
-        <p>Comprehensive protection for systems, applications, APIs, and networks using industry standards and expert manual testing.</p>
-    </div>
+    <a href="cyber-security-services.html" class="service-card-link">
+        <div class="service-card">
+            <div class="service-icon">🔒</div>
+            <h3>Cyber Security Services</h3>
+            <p>Comprehensive protection for systems, applications, APIs, and networks using industry standards and expert manual testing.</p>
+        </div>
+    </a>
 
-    <div class="service-card">
-        <div class="service-icon">📋</div>
-        <h3>Security Consultation</h3>
-        <p>Get expert advice to strengthen your security posture, meet compliance, and plan effective cyber defense strategies.</p>
-    </div>
+    <a href="security-consultation.html" class="service-card-link">
+        <div class="service-card">
+            <div class="service-icon">📋</div>
+            <h3>Security Consultation</h3>
+            <p>Get expert advice to strengthen your security posture, meet compliance, and plan effective cyber defense strategies.</p>
+        </div>
+    </a>
 
-    <div class="service-card">
-        <div class="service-icon">🛡️</div>
-        <h3>Vulnerability Assessment & Remediation</h3>
-        <p>Identify and fix system vulnerabilities with detailed scans, manual verification, and clear, actionable remediation plans.</p>
-    </div>
+    <a href="vulnerability-assessment-remediation.html" class="service-card-link">
+        <div class="service-card">
+            <div class="service-icon">🛡️</div>
+            <h3>Vulnerability Assessment & Remediation</h3>
+            <p>Identify and fix system vulnerabilities with detailed scans, manual verification, and clear, actionable remediation plans.</p>
+        </div>
+    </a>
 
-    <div class="service-card">
-        <div class="service-icon">💻</div>
-        <h3>VAPT & WAPT</h3>
-        <p>Simulate real-world attacks on systems and web apps to uncover and patch critical security weaknesses effectively.</p>
-    </div>
+    <a href="vapt-wapt.html" class="service-card-link">
+        <div class="service-card">
+            <div class="service-icon">💻</div>
+            <h3>VAPT & WAPT</h3>
+            <p>Simulate real-world attacks on systems and web apps to uncover and patch critical security weaknesses effectively.</p>
+        </div>
+    </a>
 
-    <div class="service-card">
-        <div class="service-icon">🔌</div>
-        <h3>API Security Testing</h3>
-        <p>Test REST and GraphQL APIs for broken authentication, data leaks, and authorization flaws using secure methods.</p>
-    </div>
+    <a href="api-security-testing.html" class="service-card-link">
+        <div class="service-card">
+            <div class="service-icon">🔌</div>
+            <h3>API Security Testing</h3>
+            <p>Test REST and GraphQL APIs for broken authentication, data leaks, and authorization flaws using secure methods.</p>
+        </div>
+    </a>
 
-    <div class="service-card">
-        <div class="service-icon">🌐</div>
-        <h3>Network Penetration Testing</h3>
-        <p>Assess internal and external networks for exposed ports, misconfigurations, and exploitable security loopholes and risks.</p>
-    </div>
+    <a href="network-penetration-testing.html" class="service-card-link">
+        <div class="service-card">
+            <div class="service-icon">🌐</div>
+            <h3>Network Penetration Testing</h3>
+            <p>Assess internal and external networks for exposed ports, misconfigurations, and exploitable security loopholes and risks.</p>
+        </div>
+    </a>
 </div>
 
                <!--      <div class="service-card">
@@ -259,6 +271,7 @@ and ensure <b>complete protection</b>.
 
 
 </html>
+
 
 
 
