--- a/Services.html
+++ b/Services.html
@@ -101,7 +101,7 @@ and ensure <b>complete protection</b>.
         <div class="service-card">
             <div class="service-icon">🛡️</div>
             <h3>Vulnerability Assessment & Remediation</h3>
-            <p>Identify and fix system vulnerabilities with detailed scans, manual verification, and clear, actionable remediation plans.</p>
+            <p>Find and fix vulnerabilities through scans, manual testing, and clear remediation guidance.</p>
         </div>
     </a>
 
@@ -271,6 +271,7 @@ and ensure <b>complete protection</b>.
 
 
 </html>
+
 
 
 
