--- a/Services.html
+++ b/Services.html
@@ -19,6 +19,13 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
         rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <style>
+        .service-card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+    </style>
 </head>
 
 <body>
@@ -271,6 +278,7 @@ and ensure <b>complete protection</b>.
 
 
 </html>
+
 
 
 
