--- a/cyber-security-services.html
+++ b/cyber-security-services.html
@@ -61,8 +61,8 @@
         <section class="hero hero-small">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">cyber-security-services.html</h1>
-                    <p class="hero-subtitle">cyber-security-services.html</p>
+                    <h1 class="hero-title">Cyber Security Services</h1>
+                    <p class="hero-subtitle">Protecting your digital world with expert-driven, end-to-end cyber security solutions.</p>
                 </div>
             </div>
         </section>
@@ -70,20 +70,26 @@
         <section class="section">
             <div class="container">
                 <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
+                    <h2>Why Choose Us?</h2>
+                    <p>
+                        With increasing cyber threats, having a reliable security partner is critical. Our cyber security services are:
+                    </p>
+                    <ul>
+                        <li><strong>Customized</strong> to fit your business size, industry, and risk profile.</li>
+                        <li><strong>Manual and In-depth</strong>, going beyond basic scanning.</li>
+                        <li><strong>Transparent</strong>, with clear reports and remediation steps.</li>
+                        <li><strong>Trusted</strong> by startups, enterprises, and government clients.</li>
+                    </ul>
+
+                    <h2>Get in Touch</h2>
+                    <p>
+                        Ready to secure your systems? <a href="contact.html">Contact us</a> today to schedule a free consultation or security audit. Let’s work together to identify your risks and build a strong cyber defense strategy.
+                    </p>
+
+                    <p>
+                        Don’t wait for a breach to realize the value of cybersecurity. Take the proactive step now.
+                    </p>
                     
-                </div>
-                                <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
                 </div>
             </div>
         </section>
