--- a/cyber-security-services.html
+++ b/cyber-security-services.html
@@ -70,25 +70,59 @@
         <section class="section">
             <div class="container">
                 <div class="about-content">
-                    <h2>Why Choose Us?</h2>
-                    <p>
-                        With increasing cyber threats, having a reliable security partner is critical. Our cyber security services are:
-                    </p>
-                    <ul>
-                        <li><strong>Customized</strong> to fit your business size, industry, and risk profile.</li>
-                        <li><strong>Manual and In-depth</strong>, going beyond basic scanning.</li>
-                        <li><strong>Transparent</strong>, with clear reports and remediation steps.</li>
-                        <li><strong>Trusted</strong> by startups, enterprises, and government clients.</li>
-                    </ul>
+<h2>What is Cyber Security?</h2>
+<p>
+Cyber security is the practice of protecting systems, networks, applications, and data from cyber threats. As businesses become more digitally connected, they also become more vulnerable to attacks like hacking, data breaches, malware infections, and phishing. Cyber security ensures that your digital operations remain safe, your customer data is protected, and your business continues to run without disruptions.
+</p>
 
-                    <h2>Get in Touch</h2>
-                    <p>
-                        Ready to secure your systems? <a href="contact.html">Contact us</a> today to schedule a free consultation or security audit. Let’s work together to identify your risks and build a strong cyber defense strategy.
-                    </p>
+<h2>Why is Cyber Security Important for Every Business?</h2>
+<p>
+Every organization—whether small startup or large enterprise—faces cyber risks. A single breach can result in:
+</p>
+<ul>
+  <li>Loss of sensitive customer or business data</li>
+  <li>Financial damage due to fraud or ransomware</li>
+  <li>Legal and compliance issues (GDPR, ISO 27001, etc.)</li>
+  <li>Loss of customer trust and market reputation</li>
+</ul>
 
-                    <p>
-                        Don’t wait for a breach to realize the value of cybersecurity. Take the proactive step now.
-                    </p>
+<p>
+Cyber attacks are no longer rare. They’re happening every day—targeting websites, APIs, databases, cloud systems, and even internal networks. The question is not *if*, but *when*. That’s why proactive cyber security measures are critical for every organization, regardless of size or industry.
+</p>
+
+<h2>Our Cyber Security Services</h2>
+<p>
+We provide end-to-end cyber security solutions tailored to your business needs. Whether you’re starting from scratch or want to improve your existing defenses, our team is ready to help.
+</p>
+
+<h3>Our key offerings include:</h3>
+<ul>
+  <li><strong>Vulnerability Assessment & Penetration Testing (VAPT):</strong> We simulate real-world attacks to find and fix system vulnerabilities before hackers do.</li>
+  <li><strong>Web Application Testing (WAPT):</strong> We test your web apps for flaws like SQL injection, XSS, broken authentication, and misconfigurations.</li>
+  <li><strong>API Security Testing:</strong> We secure your REST and GraphQL APIs against data exposure, broken authorization, and injection flaws.</li>
+  <li><strong>Network Penetration Testing:</strong> We evaluate internal and external networks for weak points, exposed ports, and misconfigured services.</li>
+  <li><strong>Security Consultation:</strong> We assess your current posture, identify gaps, and provide a roadmap to strengthen your defenses.</li>
+  <li><strong>Remediation Support:</strong> We help you fix the discovered issues quickly and efficiently, with clear, actionable guidance.</li>
+</ul>
+
+<h2>Why Choose Us?</h2>
+<ul>
+  <li><strong>Manual + Automated Testing:</strong> We don’t just rely on tools—we use real-world attack strategies to test your systems thoroughly.</li>
+  <li><strong>Clear Reporting:</strong> Our reports are business-friendly, highlighting critical issues, risks, and how to fix them—without jargon.</li>
+  <li><strong>Experienced Professionals:</strong> Our team includes certified ethical hackers and security consultants with real-world experience.</li>
+  <li><strong>Custom-Tailored Services:</strong> We adapt our approach based on your infrastructure, industry, and budget.</li>
+  <li><strong>Long-Term Support:</strong> We offer follow-up assessments, retesting, and advisory to maintain your security over time.</li>
+</ul>
+
+<h2>Let’s Make Your Business Cyber-Safe</h2>
+<p>
+Don’t wait for a cyber incident to take action. Let us help you build a secure foundation and protect your digital assets. Whether you need a one-time audit or long-term support, we are here to assist.
+</p>
+
+<p>
+📩 <a href="contact.html"><strong>Contact us</strong></a> today to schedule a consultation or request a quote. Your business deserves trusted security.
+</p>
+
                     
                 </div>
             </div>
