--- a/cyber-security-services.html
+++ b/cyber-security-services.html
@@ -67,9 +67,9 @@
             </div>
         </section>
 
-        <section class="section">
+        <!-- <section class="section">
             <div class="container">
-                <div class="about-content">
+                <div class="about-content"> -->
 <h2>What is Cyber Security?</h2>
 <p>
 Cyber security is the practice of protecting systems, networks, applications, and data from cyber threats. As businesses become more digitally connected, they also become more vulnerable to attacks like hacking, data breaches, malware infections, and phishing. Cyber security ensures that your digital operations remain safe, your customer data is protected, and your business continues to run without disruptions.
@@ -120,13 +120,13 @@ Don’t wait for a cyber incident to take action. Let us help you build a secure
 </p>
 
 <p>
-📩 <a href="contact.html"><strong>Contact us</strong></a> today to schedule a consultation or request a quote. Your business deserves trusted security.
+📩 <a href="Contact.html"><strong>Contact us</strong></a> today to schedule a consultation or request a quote. Your business deserves trusted security.
 </p>
 
                     
-                </div>
+                <!-- </div>
             </div>
-        </section>
+        </section> -->
 
     </main>
 
