--- a/cyber-security-services.html
+++ b/cyber-security-services.html
@@ -19,6 +19,98 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
         rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
+      <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f8f9fa;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    header, main {
+      padding: 20px;
+    }
+
+    .hero {
+      background-color: #0d6efd;
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .hero-title {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    .hero-subtitle {
+      font-size: 1.2rem;
+      opacity: 0.9;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    h2 {
+      color: #0d6efd;
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin-bottom: 16px;
+    }
+
+    ul {
+      padding-left: 20px;
+      margin-bottom: 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    a {
+      color: #0d6efd;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .cta {
+      margin-top: 40px;
+      text-align: center;
+    }
+
+    .cta a {
+      background-color: #0d6efd;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 4px;
+      display: inline-block;
+      margin-top: 10px;
+    }
+
+    .cta a:hover {
+      background-color: #0b5ed7;
+    }
+
+    @media (max-width: 768px) {
+      .hero-title {
+        font-size: 2rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -69,59 +161,42 @@
 
         <!-- <section class="section">
             <div class="container">
-                <div class="about-content"> -->
-<h2>What is Cyber Security?</h2>
-<p>
-Cyber security is the practice of protecting systems, networks, applications, and data from cyber threats. As businesses become more digitally connected, they also become more vulnerable to attacks like hacking, data breaches, malware infections, and phishing. Cyber security ensures that your digital operations remain safe, your customer data is protected, and your business continues to run without disruptions.
-</p>
+                <div class="about-content">  -->
+    <h2>What is Cyber Security?</h2>
+    <p>
+      Cyber security is the practice of protecting systems, networks, applications, and data from cyber threats. It ensures your business runs securely and your customer data remains safe.
+    </p>
 
-<h2>Why is Cyber Security Important for Every Business?</h2>
-<p>
-Every organization—whether small startup or large enterprise—faces cyber risks. A single breach can result in:
-</p>
-<ul>
-  <li>Loss of sensitive customer or business data</li>
-  <li>Financial damage due to fraud or ransomware</li>
-  <li>Legal and compliance issues (GDPR, ISO 27001, etc.)</li>
-  <li>Loss of customer trust and market reputation</li>
-</ul>
+    <h2>Why is Cyber Security Important?</h2>
+    <p>Without proper security, your business risks:</p>
+    <ul>
+      <li>Data breaches and customer information leaks</li>
+      <li>Financial losses due to ransomware or fraud</li>
+      <li>Loss of trust and business reputation</li>
+      <li>Compliance violations and legal penalties</li>
+    </ul>
 
-<p>
-Cyber attacks are no longer rare. They’re happening every day—targeting websites, APIs, databases, cloud systems, and even internal networks. The question is not *if*, but *when*. That’s why proactive cyber security measures are critical for every organization, regardless of size or industry.
-</p>
+    <h2>Our Key Services</h2>
+    <ul>
+      <li><strong>Vulnerability Assessment & Penetration Testing (VAPT):</strong> Simulate real attacks to find system flaws.</li>
+      <li><strong>Web Application Testing (WAPT):</strong> Identify bugs like XSS, SQLi, and broken login systems.</li>
+      <li><strong>API Security Testing:</strong> Secure your APIs from data leaks and weak authorization.</li>
+      <li><strong>Network Penetration Testing:</strong> Check internal/external networks for misconfigurations and open ports.</li>
+      <li><strong>Security Consultation:</strong> Strategic advice tailored to your business needs.</li>
+    </ul>
 
-<h2>Our Cyber Security Services</h2>
-<p>
-We provide end-to-end cyber security solutions tailored to your business needs. Whether you’re starting from scratch or want to improve your existing defenses, our team is ready to help.
-</p>
+    <h2>Why Choose Us?</h2>
+    <ul>
+      <li>Experienced ethical hackers & consultants</li>
+      <li>Manual + automated testing approach</li>
+      <li>Clear reports with business-friendly language</li>
+      <li>Long-term support & remediation help</li>
+    </ul>
 
-<h3>Our key offerings include:</h3>
-<ul>
-  <li><strong>Vulnerability Assessment & Penetration Testing (VAPT):</strong> We simulate real-world attacks to find and fix system vulnerabilities before hackers do.</li>
-  <li><strong>Web Application Testing (WAPT):</strong> We test your web apps for flaws like SQL injection, XSS, broken authentication, and misconfigurations.</li>
-  <li><strong>API Security Testing:</strong> We secure your REST and GraphQL APIs against data exposure, broken authorization, and injection flaws.</li>
-  <li><strong>Network Penetration Testing:</strong> We evaluate internal and external networks for weak points, exposed ports, and misconfigured services.</li>
-  <li><strong>Security Consultation:</strong> We assess your current posture, identify gaps, and provide a roadmap to strengthen your defenses.</li>
-  <li><strong>Remediation Support:</strong> We help you fix the discovered issues quickly and efficiently, with clear, actionable guidance.</li>
-</ul>
-
-<h2>Why Choose Us?</h2>
-<ul>
-  <li><strong>Manual + Automated Testing:</strong> We don’t just rely on tools—we use real-world attack strategies to test your systems thoroughly.</li>
-  <li><strong>Clear Reporting:</strong> Our reports are business-friendly, highlighting critical issues, risks, and how to fix them—without jargon.</li>
-  <li><strong>Experienced Professionals:</strong> Our team includes certified ethical hackers and security consultants with real-world experience.</li>
-  <li><strong>Custom-Tailored Services:</strong> We adapt our approach based on your infrastructure, industry, and budget.</li>
-  <li><strong>Long-Term Support:</strong> We offer follow-up assessments, retesting, and advisory to maintain your security over time.</li>
-</ul>
-
-<h2>Let’s Make Your Business Cyber-Safe</h2>
-<p>
-Don’t wait for a cyber incident to take action. Let us help you build a secure foundation and protect your digital assets. Whether you need a one-time audit or long-term support, we are here to assist.
-</p>
-
-<p>
-📩 <a href="Contact.html"><strong>Contact us</strong></a> today to schedule a consultation or request a quote. Your business deserves trusted security.
-</p>
+    <div class="cta">
+      <p>Secure your digital future with our expert team.</p>
+      <a href="contact.html">📩 Contact Us Today</a>
+    </div>
 
                     
                 <!-- </div>
