--- a/cyber-security-services.html
+++ b/cyber-security-services.html
@@ -19,98 +19,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
         rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css">
-      <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
 
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f8f9fa;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    header, main {
-      padding: 20px;
-    }
-
-    .hero {
-      background-color: #0d6efd;
-      color: white;
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    .hero-title {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-
-    .hero-subtitle {
-      font-size: 1.2rem;
-      opacity: 0.9;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 20px;
-    }
-
-    h2 {
-      color: #0d6efd;
-      margin-bottom: 10px;
-    }
-
-    p {
-      margin-bottom: 16px;
-    }
-
-    ul {
-      padding-left: 20px;
-      margin-bottom: 20px;
-    }
-
-    li {
-      margin-bottom: 8px;
-    }
-
-    a {
-      color: #0d6efd;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .cta {
-      margin-top: 40px;
-      text-align: center;
-    }
-
-    .cta a {
-      background-color: #0d6efd;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 4px;
-      display: inline-block;
-      margin-top: 10px;
-    }
-
-    .cta a:hover {
-      background-color: #0b5ed7;
-    }
-
-    @media (max-width: 768px) {
-      .hero-title {
-        font-size: 2rem;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -159,9 +68,9 @@
             </div>
         </section>
 
-        <!-- <section class="section">
+        <section class="section">
             <div class="container">
-                <div class="about-content">  -->
+                <div class="about-content"> 
     <h2>What is Cyber Security?</h2>
     <p>
       Cyber security is the practice of protecting systems, networks, applications, and data from cyber threats. It ensures your business runs securely and your customer data remains safe.
@@ -199,9 +108,9 @@
     </div>
 
                     
-                <!-- </div>
+                </div>
             </div>
-        </section> -->
+        </section>
 
     </main>
 
